# bonsai-phi-scrubber

./: .gitignore  AGENTS.md  CANON.md  Cargo.toml  README.md  manifest.yaml  run.sh  slack-app-manifest.yaml
backlog/: m0.5.md  m1.md  m3.md
crates/airplane-core/: Cargo.toml
crates/airplane-core/src/: eval.rs  model.rs  pack.rs  pipeline.rs  ports.rs  rules.rs
docs/: bonsai-ecosystem-plan.md  browser-gpu-spike-report.md  extending.md  ios-shell-scaffold.md  model-setup.md  repo-quality-benchmark.md  webgpu-vs-mlx.md
docs/contracts/: scrub-response.sample.json  scrub-response.schema.json
docs/demo/: how-the-demo-works.md  onboarding.md  phone-https-observability.md  reference-architecture.md  review-readiness.md  system-network-data-flows.md
docs/deprecations/: README.md  demo-cleanup-proposal.md  gitops-revival-runbook.md
docs/eval-plan/: README.md  failure-modes.yaml
docs/positioning/: cncf-end-user-and-inference-ecosystem.md  context-graph-synthesis.md  devrel-presentation.md  prismml-partner-brief.md
docs/research/: deepagent-pack-builder-research.md
docs/seed/: bonsai-ecosystem-brief.md
eval/: README.md  golden-run.txt
eval/error-discovery/: analyze_failure_modes.py  generate_traces.py  review_app.html  server.py
files/: adr-015-airplane-mode-simulated-in-web-demo.md
gates/: README.md  reward_lint.rego  scope_boundary.rego
packs/: README.md
packs/coach-session/: pack.yaml  (+1 more)
scripts/: check-public-graph.sh  serve-local-https-proxy.sh  serve-model.sh  setup-slack-secret.sh  smoke-browser-spans.sh  smoke-ethical-gate-fixtures.sh  smoke-mcp-cli-parity.sh  smoke-slack-sink.sh  wait-phone-capability.sh
shells/: README.md
shells/mcp/: Cargo.toml  README.md
shells/mcp/src/: main.rs
shells/web/: Cargo.toml  README.md
shells/web/src/: main.rs
shells/web/static/: bonsai-worker.js  index.html  proof.html
spike/: REPORT.md  last-run.json  spike.py
(+57 files in other folders)
