[workspace]
resolver = "2"
members = ["crates/airplane-core", "shells/cli", "shells/mcp", "shells/web"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ChaiWithJai/airplane-mode"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
anyhow = "1"
sha2 = "0.10"
