[package]
name = "airplane-core"
version = "0.1.0"
description = "Portable, auditable on-device PHI-scrub trust core: rules executor + verifier gate + pipeline + pack loader. The model and all platform concerns are ports."
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
