[package]
name = "airplane-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "airplane-mcp"
path = "src/main.rs"

[dependencies]
airplane-core = { path = "../../crates/airplane-core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { version = "2", features = ["json"] }
